Update About page: increased top padding, enhanced text visibility, and updated team names

--- a/about.html
+++ b/about.html
@@ -137,17 +137,17 @@
                     <div class="team-photo">
                         <i class="fas fa-user-circle"></i>
                     </div>
-                    <h3>Elizabeth Morgan</h3>
+                    <h3>Bukloa George</h3>
                     <p class="team-title">Founder & CEO</p>
-                    <p>With over 20 years of experience in healthcare administration and a personal passion for elevating the standard of in-home care, Elizabeth leads our organization with vision and heart.</p>
+                    <p>With over 20 years of experience in healthcare administration and a personal passion for elevating the standard of in-home care, Bukloa leads our organization with vision and heart.</p>
                 </div>
                 <div class="team-member">
                     <div class="team-photo">
                         <i class="fas fa-user-circle"></i>
                     </div>
-                    <h3>Dr. James Wilson</h3>
+                    <h3>Rich Lee Cherry</h3>
                     <p class="team-title">Medical Director</p>
-                    <p>Board-certified in geriatric medicine, Dr. Wilson ensures that our care protocols meet the highest clinical standards while maintaining our commitment to comfort and dignity.</p>
+                    <p>Board-certified in geriatric medicine, Rich ensures that our care protocols meet the highest clinical standards while maintaining our commitment to comfort and dignity.</p>
                 </div>
                 <div class="team-member">
                     <div class="team-photo">
