Add mobile-friendly navigation and update intro section image

--- a/index.html
+++ b/index.html
@@ -23,7 +23,21 @@
                     <h1>Daughter<br>of Compassion</h1>
                 </div>
             </div>
-            <nav>
+            <nav class="desktop-nav">
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="#testimonials">Testimonials</a></li>
+                    <li><a href="#contact" class="btn-primary">Contact Us</a></li>
+                </ul>
+            </nav>
+            <div class="mobile-menu-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <nav class="mobile-nav">
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#services">Services</a></li>
@@ -34,6 +48,7 @@
             </nav>
         </div>
     </header>
+    <div class="menu-overlay"></div>
 
     <section id="home" class="hero">
         <div class="container">
@@ -72,7 +87,7 @@
                     </div>
                 </div>
                 <div class="intro-image luxury-image gold-vignette">
-                    <img src="images/doc image 1.jpg" alt="Compassionate Care">
+                    <img src="images/doc-image-3d-2.jpg" alt="Compassionate Care">
                 </div>
             </div>
         </div>
@@ -407,5 +422,6 @@
 
     <script src="js/script.js"></script>
     <script src="js/enhanced-script.js"></script>
+    <script src="js/mobile-menu.js"></script>
 </body>
 </html>
