--- a/thank-you.html
+++ b/thank-you.html
@@ -17,7 +17,21 @@
             <div class="logo">
                 <img src="images/image0.png" alt="Daughter of Compassion Logo">
             </div>
-            <nav>
+            <nav class="desktop-nav">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html#services">Services</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="index.html#testimonials">Testimonials</a></li>
+                    <li><a href="index.html#contact" class="btn-primary">Contact Us</a></li>
+                </ul>
+            </nav>
+            <div class="mobile-menu-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <nav class="mobile-nav">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="index.html#services">Services</a></li>
@@ -28,6 +42,7 @@
             </nav>
         </div>
     </header>
+    <div class="menu-overlay"></div>
 
     <section class="thank-you">
         <div class="container">
