Enhance website design with parallax background and improved layout
- Added parallax scrolling effect for hero section
- Applied card-style treatment to sections
- Ensured proper text readability with semi-transparent overlays
- Fixed hero section card sizing to maximize background visibility
- Added parallax background to about page with doc image 888
- Updated image in Core Values section

--- a/about.html
+++ b/about.html
@@ -12,7 +12,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Raleway:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="parallax-page">
+    <div class="page-background">
+        <img src="images/doc image 888.jpg" alt="Daughter of Compassion Background">
+    </div>
     <header>
         <div class="container">
             <div class="header-left">
@@ -36,10 +39,6 @@
     </header>
 
     <section class="about-hero">
-        <div class="hero-banner">
-            <img src="images/doc-9.PNG" alt="Luxury In-Home Care">
-            <div class="hero-overlay"></div>
-        </div>
         <div class="container">
             <div class="about-hero-content">
                 <h1>About Daughter of Compassion</h1>
@@ -72,7 +71,7 @@
             <div class="values-grid">
                 <div class="value-card">
                     <div class="value-image">
-                        <img src="images/doc image 1.jpg" alt="Compassion">
+                        <img src="images/doc image 111.jpg" alt="Compassion">
                     </div>
                     <h3>Compassion</h3>
                     <p>We approach every interaction with genuine empathy and understanding, recognizing that each client's journey is unique.</p>
